--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="./light/src/css/lightbox.css" rel="stylesheet">
-  <title>SCSS Example</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+
+  <title>Example</title>
 </head>
 <body>
     <div class="hero-shot">
@@ -28,47 +32,108 @@
         </div>
     </div>
     <div class="itinerary">
-        <h2>Itinerary</h2>
+        <h2>ITINERARIO</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-6" data-aos="fade-right">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Event 1</h5>
-                            <p class="card-text">Description of Event 1.</p>
-                            <a href="https://maps.google.com/?q=Event+1+Location" class="btn btn-primary" target="_blank">View on Map</a>
+                            <h5 class="card-title">CEREMONIA</h5>
+                            <p class="card-text">Hacienda Dos Mezquites</p>
+                            <p class="card-text">6:00 PM</p>
+                            <a href="https://maps.google.com/?q=Event+1+Location" class="btn btn-primary" target="_blank">VER MAPA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Event 2</h5>
-                            <p class="card-text">Description of Event 2.</p>
-                            <a href="https://maps.google.com/?q=Event+2+Location" class="btn btn-primary" target="_blank">View on Map</a>
+                            <h5 class="card-title">RECEPCIÓN</h5>
+                            <p class="card-text">Hacienda Dos Mezquites</p>
+                            <p class="card-text">6:00 PM</p>
+                            <a href="https://maps.google.com/?q=Event+2+Location" class="btn btn-primary" target="_blank">VER MAPA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-right">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Event 3</h5>
-                            <p class="card-text">Description of Event 3.</p>
-                            <a href="https://maps.google.com/?q=Event+3+Location" class="btn btn-primary" target="_blank">View on Map</a>
+                            <h5 class="card-title">CENA</h5>
+                            <p class="card-text">Hacienda Dos Mezquites</p>
+                            <p class="card-text">8:00 PM</p>
+                            <a href="https://maps.google.com/?q=Event+3+Location" class="btn btn-primary" target="_blank">VER MAPA</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-right">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">¡FIESTA!</h5>
+                            <p class="card-text">Hacienda Dos Mezquites</p>
+                            <p class="card-text">9:00 PM</p>
+                            <a href="https://maps.google.com/?q=Event+3+Location" class="btn btn-primary" target="_blank">VER MAPA</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="gallery">
-        <a href="img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 1"></a>
-        <a href="img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 2"></a>
-        <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 3"></a>
-        <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 1"></a>
-        <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 2"></a>
-        <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 3"></a>
+    <div class="dress-code">
+        <h2 data-aos="fade-right">DRESS CODE</h2>
+        <p data-aos="fade-left">Mujeres: Vestido Largo de Noche</p>
+        <p data-aos="fade-right">Hombres: Traje Completo Formal</p>
+    </div>
+    <div class="gallery container">
+        <h2>GALERÍA</h2>
+        <div data-aos="fade-right">
+            <a href="img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 1"></a>
+            <a href="img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 2"></a>
+        </div>
+        <div data-aos="fade-left">
+            <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 3"></a>
+            <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 1"></a>
+            <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 2"></a>
+            <a href="./img.jpg" data-lightbox="wedding-gallery"><img src="./img.jpg" alt="Image 3"></a>
+        </div>
         <!-- Add more images as needed -->
+      </div>
+      <div class="gift container">
+        <div class="flip-card " data-aos="fade-right">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <h2>Sears</h2>
+                <p>Some content here</p>
+              </div>
+              <div class="flip-card-back">
+                <h2>Back Side</h2>
+                <p>More content here</p>
+              </div>
+            </div>
+          </div>  
+          <div class="flip-card" data-aos="fade-up">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <h2>Liverpool</h2>
+                <p>Some content here</p>
+              </div>
+              <div class="flip-card-back">
+                <h2>Back Side</h2>
+                <p>More content here</p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card" data-aos="fade-right">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <h2>Amazon</h2>
+                <p>Some content here</p>
+              </div>
+              <div class="flip-card-back">
+                <h2>Back Side</h2>
+                <p>More content here</p>
+              </div>
+            </div>
+          </div>
       </div>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <!-- Bootstrap JS and dependencies -->
