--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     <link href="./light/src/css/lightbox.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400..700&display=swap" rel="stylesheet">
 
   <title>Example</title>
 </head>
 <body>
     <div class="hero-shot">
         <div class="hero-shot__content container" data-aos="fade-up">
-            <h1 class="hero-shot__title">SCSS Example</h1>
-            <p class="hero-shot__text">This is a simple example of how to use SCSS in your project.</p>
-            <a href="#" class="hero-shot__btn">Learn More</a>
+            <h1 class="hero-shot__title">Ale & Mani</h1>
+            <p class="hero-shot__text">Dales a quienes amas alas para volar, raíces para regresar y razones para quedarse.</p>
         </div>
     </div>
     <div class="countdown">
